[package]
name = "jpeg_extractor"
description = "Extract jpeg images from any binary via command line"
homepage = "https://github.com/MyIsaak/jpeg_extractor"
documentation = "https://docs.rs/jpeg_extractor"
version = "0.1.2"
edition = "2018"
license = "MIT"
keywords = ["image", "binary", "jpeg", "command", "extract" ]
categories = ["command-line-utilities", "multimedia::images", "multimedia"]
repository = "https://github.com/MyIsaak/jpeg_extractor"
include = [
	"**/**.rs",
	"Cargo.toml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
